# ShortcutSage

./: .gitignore  CI_DEEP_DIVE.md  CI_REVIEW.md  README-ShortcutSage-Notion.md  README.md  WHAT_ACTUALLY_WORKS.md  WINDOW_DETECTION_GAP.md  agent-prompt-pr-train.md  config.toml  implementation-plan.md  justfile  pyproject.toml  renovate.json  shortcut-sage-bible.md
.github/workflows/: ci.yml  visual-tests.yml
config/: rules.yaml  shortcuts.yaml
docs/: HOOKS.md  shortcut_sage_autonomous_agent_prompt_paste_verbatim_into_agent.md  shortcut_sage_pr_train_operator_handbook_save_only.md
docs/plans/: PR-05-overlay-checklist.md  StagedImplementation.md  visual-test-checklist.md
docs/researchReq/: dbus-buffer-debug.md
docs/updates/: 2025-11-08-project-status.md  2025-11-11-status-progress.md  README.md
kwin/: event-monitor.js  metadata.json
sage/: __init__.py  __main__.py  audit.py  buffer.py  config.py  dbus_client.py  dbus_daemon.py  demo.py  dev_hints.py  doctor.py  events.py  exporter.py  features.py  matcher.py  models.py  overlay.py  policy.py  telemetry.py  watcher.py
scripts/: export_shortcuts.py  install-kwin-script.sh  shortcutsage-autostart.desktop  test_kwin_integration.py  validate_screenshots.py  visual_test_overlay.py
tests/: __init__.py  conftest.py
tests/e2e/: test_overlay_signal.py
tests/integration/: test_dbus.py  test_engine_golden.py  test_hot_reload.py
tests/unit/: test_buffer.py  test_config.py  test_daemon.py  test_engine_components.py  test_models.py  test_overlay.py  test_version.py
